<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblTargetColor2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="#777"
        android:gravity="center"
        android:text="@string/Target_color"
        app:layout_constraintBottom_toTopOf="@+id/sbrRed2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblProposedColor2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="200dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <TextView
        android:id="@+id/lblProposedColor2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="#6699CC"
        android:gravity="center"
        android:text="@string/Proposed_color"
        app:layout_constraintBottom_toTopOf="@+id/sbrRed2"
        app:layout_constraintEnd_toStartOf="@id/lblTargetColor2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="232dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <TextView
        android:id="@+id/lblRedValue2"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="0"
        android:gravity="center|end"
        android:text="102"
        app:layout_constraintBottom_toTopOf="@+id/lblGreenValue2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_conversion_absoluteHeight="52dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <SeekBar
        android:id="@+id/sbrRed2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:max="255"
        android:progress="102"
        android:progressTint="#B00"
        android:thumbTint="#B00"
        app:layout_constraintBottom_toTopOf="@+id/sbrGreen3"
        app:layout_constraintEnd_toStartOf="@+id/lblRedValue2"
        app:layout_constraintStart_toEndOf="@+id/lblRedTitle2"
        tools:layout_conversion_absoluteHeight="18dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <TextView
        android:id="@+id/lblRedTitle2"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="0"
        android:gravity="center|start"
        android:text="@string/Red"
        app:layout_constraintBottom_toTopOf="@+id/lblGreenTitle2"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="52dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <TextView
        android:id="@+id/lblGreenValue2"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="0"
        android:gravity="center|end"
        android:text="153"
        app:layout_constraintBottom_toTopOf="@+id/lblBlueValue6"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_conversion_absoluteHeight="52dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <SeekBar
        android:id="@+id/sbrGreen3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:max="255"
        android:progress="153"
        android:progressTint="#0B0"
        android:thumbTint="#0B0"
        app:layout_constraintBottom_toTopOf="@+id/sbrBlue3"
        app:layout_constraintEnd_toStartOf="@+id/lblGreenValue2"
        app:layout_constraintStart_toEndOf="@+id/lblGreenTitle2"
        tools:layout_conversion_absoluteHeight="18dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <TextView
        android:id="@+id/lblGreenTitle2"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="0"
        android:gravity="center|start"
        android:text="@string/Green"
        app:layout_constraintBottom_toTopOf="@+id/lblBlueTitle3"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="85dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <TextView
        android:id="@+id/lblBlueTitle3"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="0"
        android:gravity="center|start"
        android:text="@string/Blue"
        app:layout_constraintBottom_toTopOf="@+id/btnGetScore3"
        app:layout_constraintEnd_toStartOf="@+id/sbrBlue3"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="69dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <TextView
        android:id="@+id/lblBlueValue6"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="0"
        android:gravity="center|end"
        android:text="204"
        app:layout_constraintBottom_toTopOf="@+id/btnGetScore3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sbrBlue3"
        tools:layout_conversion_absoluteHeight="52dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <SeekBar
        android:id="@+id/sbrBlue3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:max="255"
        android:progress="204"
        android:progressTint="#00B"
        app:layout_constraintBottom_toTopOf="@+id/btnGetScore3"
        app:layout_constraintEnd_toStartOf="@+id/lblBlueValue6"
        app:layout_constraintStart_toEndOf="@+id/lblBlueTitle3"
        tools:layout_conversion_absoluteHeight="18dp"
        tools:layout_conversion_absoluteWidth="0dp"
        tools:thumbTint="#00B" />

    <Button
        android:id="@+id/btnGetScore3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:text="@string/Score"
        app:layout_constraintBottom_toTopOf="@+id/btnNewColor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="105dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/btnNewColor2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/New"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="72dp"
        tools:layout_conversion_absoluteWidth="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>