<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblProposedColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="#6699CC"
                android:gravity="center"
                android:text="@string/Proposed_color"
                tools:layout_conversion_absoluteHeight="232dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/lblTargetColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="#777"
                android:gravity="center"
                android:text="@string/Target_color"
                tools:layout_conversion_absoluteHeight="200dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblRedTitle"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|start"
                android:text="@string/Red"
                tools:layout_conversion_absoluteHeight="52dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="232dp" />

            <SeekBar
                android:id="@+id/sbrRed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="255"
                android:progress="102"
                android:progressTint="#B00"
                android:thumbTint="#B00"
                tools:layout_conversion_absoluteHeight="18dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="232dp" />

            <TextView
                android:id="@+id/lblRedValue"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|end"
                android:text="102"
                tools:layout_conversion_absoluteHeight="52dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="232dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblGreenTitle"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|start"
                android:text="@string/Green"
                tools:layout_conversion_absoluteHeight="85dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="285dp" />

            <SeekBar
                android:id="@+id/sbrGreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="255"
                android:progress="153"
                android:progressTint="#0B0"
                android:thumbTint="#0B0"
                tools:layout_conversion_absoluteHeight="18dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="285dp" />

            <TextView
                android:id="@+id/lblGreenValue"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|end"
                android:text="153"
                tools:layout_conversion_absoluteHeight="52dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="285dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblBlueTitle"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|start"
                android:text="@string/Blue"
                tools:layout_conversion_absoluteHeight="69dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="370dp" />

            <SeekBar
                android:id="@+id/sbrBlue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="255"
                android:progress="204"
                android:progressTint="#00B"
                tools:layout_conversion_absoluteHeight="18dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="370dp"
                tools:thumbTint="#00B" />

            <TextView
                android:id="@+id/lblBlueValue"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|end"
                android:text="204"
                tools:layout_conversion_absoluteHeight="52dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="370dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnNewColor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/New"
                tools:layout_conversion_absoluteHeight="72dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="438dp" />

            <Button
                android:id="@+id/btnGetScore"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/Score"
                tools:layout_conversion_absoluteHeight="105dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="438dp" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>